# search-mcp-gateway

./: .env.example  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/cli/: app.rs  mod.rs
src/cli/commands/: crawl.rs  extract.rs  mod.rs  search.rs  status.rs
src/domain/: errors.rs  models.rs  provider.rs
src/gateway/: fallback.rs  health.rs  mod.rs  ranking.rs  service.rs  strategy.rs
src/infra/: cache.rs  config.rs  http.rs  mod.rs  telemetry.rs
src/mcp/: server.rs
src/mcp/tools/: crawl.rs  extract.rs  mod.rs  provider_status.rs  search.rs
src/providers/: mod.rs  registry.rs
src/providers/ddg/: client.rs  mapper.rs  mod.rs
src/providers/tavily/: client.rs  mapper.rs  mod.rs
